--- a/poly_line_navigation/thorvald_2d_nav/maps/norway_curved_poles.yaml
+++ b/poly_line_navigation/thorvald_2d_nav/maps/norway_curved_poles.yaml
@@ -1,4 +1,4 @@
-image: complete_curved_poles.pgm
+image: norway_curved_poles.pgm
 resolution: 0.050000
 origin: [-100.000000, -100.000000, 0.000000]
 negate: 0
