one more cleanup

--- a/thorvald_2d_nav/CMakeLists.txt
+++ b/thorvald_2d_nav/CMakeLists.txt
@@ -165,14 +165,11 @@ include_directories(${PYTHON_INCLUDE_DIRS})
  add_executable(poly_nav src/poly_nav.cpp)
  target_link_libraries(poly_nav ${catkin_LIBRARIES})
 
- add_executable(poly_nav_RANSAC_new src/poly_nav_RANSAC_new.cpp)
- target_link_libraries(poly_nav_RANSAC_new ${catkin_LIBRARIES})
+ add_executable(poly_nav_row_following src/poly_nav_row_following.cpp)
+ target_link_libraries(poly_nav_row_following ${catkin_LIBRARIES})
 
  add_executable(poly_nav_row_transition src/poly_nav_row_transition.cpp)
  target_link_libraries(poly_nav_row_transition ${catkin_LIBRARIES})
-
- add_executable(odom_pose_publisher src/odom_pose_publisher.cpp)
- target_link_libraries(odom_pose_publisher ${catkin_LIBRARIES} ${PYTHON_LIBRARIES})
 
  add_executable(hokuyo_pose_publisher src/hokuyo_pose_publisher.cpp)
  target_link_libraries(hokuyo_pose_publisher ${catkin_LIBRARIES} ${PYTHON_LIBRARIES})
@@ -182,9 +179,8 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 add_dependencies(poly_nav ${${thorvald_2d_nav}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(poly_nav_RANSAC_new ${${thorvald_2d_nav}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(poly_nav_row_following ${${thorvald_2d_nav}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(poly_nav_row_transition ${${thorvald_2d_nav}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(odom_pose_publisher ${${thorvald_2d_nav}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(hokuyo_pose_publisher ${${thorvald_2d_nav}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
